Working on the covers and book info. Also still trying to fix the quicksand/search bug

--- a/web/sass/_layout.scss
+++ b/web/sass/_layout.scss
@@ -35,26 +35,26 @@ section {
 
 article {
 	width: 150px;
-	height: 200px;
+	height: 280px;
 	text-align: center;
-	font-size: 10px;
-	background-color: rgba(0,0,0,0.3);
 	margin:10px;
 	float: left;
-	position: relative;
+	background-color: rgba(0,0,0,0.75);
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	padding-top: 230px;
+	color: #7B7980;
+	@include box-sizing(border-box);
 	@include border-radius(5px);
 	@include bevel(white);
-	img {
-
-	}
 	.title {
-
+		font-size: 15px;
 	}
 	.author {
-
+		font-size: 20px;
 	}
 	.date {
-
+		font-size: 10px;
 	}
 }
 
